--- a/package.json
+++ b/package.json
@@ -11,13 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.932.0",
-    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "express-fileupload": "^1.2.1",
+    "mongoose": "^5.12.14",
     "multer": "^1.4.2",
-    "multer-s3": "^2.9.0"
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
